--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -198,5 +198,33 @@
   "pleaseSelectAtLeastOneOption": "Vă rugăm să selectați cel puțin o opțiune",
   "questionnaireCompleted": "Ați completat chestionarul!",
   "clearAllSelections": "Șterge toate selecțiile",
-  "selectedCount": "Selectat ({count})"
+  "selectedCount": "Selectat ({count})",
+
+  "reviewAnswersTitle": "Revizuiește răspunsurile tale",
+  "reviewAnswersLetsFind": "Să-l găsim!",
+
+  "reviewNoAnswer": "Fără răspuns",
+  "reviewNoAnswersToDisplay": "Nu există răspunsuri de afișat",
+  "reviewAnswerUpdatedSuccessfully": "Răspuns actualizat cu succes",
+
+  "uploadCvTitle": "Adaugă CV-ul tău",
+  "uploadCvOneLastStep": "Un ultim pas",
+  "uploadCvDescription": "Încarcă CV-ul tău pentru a ne ajuta să te conectăm cu stagii relevante",
+  "uploadCvHelpInfo": "Aceasta ne ajută să înțelegem mai bine abilitățile și experiența ta",
+  "uploadCvUploadPdf": "Încarcă CV-ul tău (PDF)",
+  "uploadCvSkipForNow": "Sari pentru moment",
+  "uploadCvLetsGetIt": "Să începem",
+  "uploadCvReadyToUpload": "CV gata pentru încărcare",
+  "uploadCvChooseDifferentFile": "Alege un fișier diferit",
+  "uploadCvPleaseUploadFirst": "Te rog încarcă mai întâi CV-ul",
+  "uploadCvFailedToPick": "Nu s-a putut selecta fișierul CV",
+  "uploadCvSuccessfullySaved": "CV salvat cu succes",
+  "uploadCvFailedToSave": "Nu s-a putut salva CV-ul",
+
+  "processingFindingOpportunities": "Găsim oportunitățile perfecte pentru tine...",
+  "processingAnalyzingProfile": "Analizăm profilul tău pentru a te conecta cu cele mai bune joburi",
+  "processingFailedToProcess": "Nu s-au putut procesa datele tale. Te rog încearcă din nou.",
+  "processingErrorOccurred": "A apărut o eroare: {error}",
+  "processingTryAgain": "Încearcă din nou",
+  "processingGoBack": "Înapoi"
 }
