--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -452,5 +452,6 @@
   "settingsTermsOfServicePageEntireAgreementText": "Questi Termini costituiscono l'accordo completo tra voi e you'll get it riguardo alla Piattaforma.",
   "settingsTermsOfServicePageContactUs": "Contattateci",
   "settingsTermsOfServicePageContactUsText": "Se avete domande su questi Termini, vi preghiamo di contattarci a ",
-  "settingsTermsOfServicePageLastUpdated": "Ultimo aggiornamento: 9 aprile 2025"
+  "settingsTermsOfServicePageLastUpdated": "Ultimo aggiornamento: 9 aprile 2025",
+  "settingsPageDeletingData": "Eliminazione dati..."
 }
