--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -452,5 +452,6 @@
   "settingsTermsOfServicePageEntireAgreementText": "Deze Voorwaarden vormen de volledige overeenkomst tussen u en you'll get it betreffende het Platform.",
   "settingsTermsOfServicePageContactUs": "Neem Contact Op",
   "settingsTermsOfServicePageContactUsText": "Als u vragen heeft over deze Voorwaarden, neem dan contact met ons op via ",
-  "settingsTermsOfServicePageLastUpdated": "Laatst bijgewerkt: 9 april 2025"
+  "settingsTermsOfServicePageLastUpdated": "Laatst bijgewerkt: 9 april 2025",
+  "settingsPageDeletingData": "Gegevens verwijderen..."
 }
