--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -453,5 +453,6 @@
   "settingsTermsOfServicePageEntireAgreementText": "Acești Termeni constituie acordul întreg între dumneavoastră și you'll get it cu privire la Platformă.",
   "settingsTermsOfServicePageContactUs": "Contactați-ne",
   "settingsTermsOfServicePageContactUsText": "Dacă aveți întrebări despre acești Termeni, vă rugăm să ne contactați la ",
-  "settingsTermsOfServicePageLastUpdated": "Ultima actualizare: 9 aprilie 2025"
+  "settingsTermsOfServicePageLastUpdated": "Ultima actualizare: 9 aprilie 2025",
+  "settingsPageDeletingData": "Ștergere date..."
 }
